@@ -126,6 +126,7 @@ class TestDuplSet:
             ? a
             """))
 
+
 class TestDumpLoadUnicode:
     # test triggered by SamH on stackoverflow (https://stackoverflow.com/q/45281596/1307905)
     # and answer by randomir (https://stackoverflow.com/a/45281922/1307905)
@@ -152,7 +153,7 @@ class TestFlowStyle:
         yaml.default_flow_style = None
         data = yaml.map()
         data['b'] = 1
-        data['a'] = [[1, 2],[3, 4]]
+        data['a'] = [[1, 2], [3, 4]]
         yaml.dump(data, sys.stdout)
         out, err = capsys.readouterr()
         assert out == "b: 1\na:\n- [1, 2]\n- [3, 4]\n"
